@@ -23,8 +23,7 @@ GSEA_fgsea <- function(geneList,
                  nperm=nPerm,
                  minSize=minGSSize,
                  maxSize=maxGSSize,
-                 gseaParam=exponent,
-                 nproc = floor(detectCores()*.75))
+                 gseaParam=exponent)
     
     p.adj <- p.adjust(tmp_res$pval, method=pAdjustMethod)
     qvalues <- calculate_qvalue(tmp_res$pval)
@@ -115,12 +114,6 @@ GSEA_fgsea <- function(geneList,
 ##' @param USER_DATA annotation data
 ##' @param by one of 'fgsea' or 'DOSE'
 ##' @return gseaResult object
-##' @importFrom plyr ldply
-##' @importFrom parallel detectCores
-##' @importFrom parallel mclapply
-##' @importFrom utils setTxtProgressBar
-##' @importFrom utils txtProgressBar
-##' @importFrom stats p.adjust
 ##' @export
 ##' @author Yu Guangchuang
 GSEA_internal <- function(geneList,
@@ -156,7 +149,13 @@ GSEA_internal <- function(geneList,
          USER_DATA         = USER_DATA)
 }
 
-
+##' @importFrom utils setTxtProgressBar
+##' @importFrom utils txtProgressBar
+##' @importFrom stats p.adjust
+##' @importFrom BiocParallel bplapply
+##' @importFrom BiocParallel MulticoreParam
+##' @importFrom BiocParallel bpstart
+##' @importFrom BiocParallel bpstop
 GSEA_DOSE <- function(geneList,
                  exponent,
                  nPerm,
@@ -204,38 +203,22 @@ GSEA_DOSE <- function(geneList,
 
     if (verbose) {
         print("calculating permutation scores...")
-        pb <- txtProgressBar(min=0, max=nPerm, style=3)
     }
     if (seed) {
         seeds <- sample.int(nPerm)
     }
+
+    bp <- bpstart(MulticoreParam(progressbar=verbose))
     
-    ncores <- floor(detectCores()*.75)
-    if (ncores < 1)
-        ncores <- 1
-    
-    if (Sys.info()[1] == "Windows") {
-        permScores <- lapply(1:nPerm, function(i) {
-            if (verbose)
-                setTxtProgressBar(pb, i)
-            if (seed)
-                set.seed(seeds[i])
-            perm.gseaEScore(geneList, selected.gs, exponent)
-        })
-    } else {
-        permScores <- mclapply(1:nPerm, function(i) {
-            if (verbose) 
-                setTxtProgressBar(pb, i)
-            if (seed)
-                set.seed(seeds[i])
-            perm.gseaEScore(geneList, selected.gs, exponent)
-        }, mc.cores=ncores)
-    }
+    permScores <- bplapply(1:nPerm, function(i) {
+        if (seed)
+            set.seed(seeds[i])
+        perm.gseaEScore(geneList, selected.gs, exponent)
+    }, BPPARAM=bp)
+
+    bpstop(bp)
     
     permScores <- do.call("cbind", permScores)
-
-    if(verbose)
-        close(pb)
     
     rownames(permScores) <- names(selected.gs)
 
